--- a/app/src/main/res/layout/products_fragment.xml
+++ b/app/src/main/res/layout/products_fragment.xml
@@ -4,11 +4,11 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".presentation.ProductsFragment">
+        tools:context=".presentation.productselect.ProductsFragment">
 
     <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Hello"/>
+            android:text="Hello products"/>
 
 </FrameLayout>
