--- a/app/src/main/res/navigation/products_to_pay_navigation.xml
+++ b/app/src/main/res/navigation/products_to_pay_navigation.xml
@@ -7,7 +7,7 @@
 
     <fragment
             android:id="@+id/productsFragment"
-            android:name="com.tpaga.productstopay.presentation.ProductsFragment"
+            android:name="com.tpaga.productstopay.presentation.productselect.ProductsFragment"
             android:label="@string/label_products"
             tools:layout="@layout/products_fragment">
 
