--- a/app/src/main/res/layout/products_fragment.xml
+++ b/app/src/main/res/layout/products_fragment.xml
@@ -6,9 +6,11 @@
         android:layout_height="match_parent"
         tools:context=".presentation.productselect.ProductsFragment">
 
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:text="Hello products"/>
+            android:layout_height="match_parent">
+
+    </androidx.recyclerview.widget.RecyclerView>
 
 </FrameLayout>
