--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,4 +8,19 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="ProductTextViewName">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/colorFontNormal</item>
+        <item name="android:textSize">@dimen/fontSizeName</item>
+        <item name="android:layout_centerInParent">true</item>
+        <item name="android:text">@string/testDefault</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_margin">16dp</item>
+    </style>
+
+    <dimen name="fontSizeName">18sp</dimen>
+    <dimen name="marginSizeName">12sp</dimen>
+    <string name="testDefault">Default</string>
+    <color name="colorFontNormal">#FFFFFF</color>
 </resources>
