[Feat] Add ProductPurchasedFragment and implementation deep link navigation.

--- a/app/src/main/res/layout/product_purchased_fragment.xml
+++ b/app/src/main/res/layout/product_purchased_fragment.xml
@@ -4,15 +4,12 @@
         xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".presentation.productlist.ProductListFragment">
+        tools:context=".presentation.productpurchased.ProductPurchasedFragment">
 
-    <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView"
+    <TextView
+            android:id="@+id/currentProductId"
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-    </androidx.recyclerview.widget.RecyclerView>
-
-    <include layout="@layout/loading_view"/>
+            android:layout_height="match_parent"
+            android:text="Hello"/>
 
 </FrameLayout>
