[Feat] Add productPurchasedFragment to menu nav. -Modified deep link setting uri to https. -Show field tpaga_payment_url in browser, when response is ok.

--- a/app/src/main/res/navigation/products_to_pay_navigation.xml
+++ b/app/src/main/res/navigation/products_to_pay_navigation.xml
@@ -26,8 +26,11 @@
               tools:layout="@layout/product_purchased_fragment">
         <argument
                 android:name="productId"
-                app:argType="integer" />
-        <deepLink android:id="@+id/deepLink" app:uri="ptpay://product/{productId}"/>
+                app:argType="integer"
+                android:defaultValue="0"/>
+        <deepLink
+                android:id="@+id/webUrlDeepLink"
+                app:uri="https://www.ptpay.com/product/{productId}"/>
     </fragment>
 
 </navigation>
