--- a/app/src/main/res/layout/product_purchased_fragment.xml
+++ b/app/src/main/res/layout/product_purchased_fragment.xml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout
+<androidx.constraintlayout.widget.ConstraintLayout
         xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".presentation.productpurchased.ProductPurchasedFragment">
+        android:layout_margin="16dp">
 
     <TextView
             android:id="@+id/currentProductId"
@@ -12,4 +11,4 @@
             android:layout_height="match_parent"
             android:text="Hello"/>
 
-</FrameLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
