--- a/app/src/main/res/menu/menu_nav_drawer.xml
+++ b/app/src/main/res/menu/menu_nav_drawer.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:checkableBehavior="single">
-        <!--<item-->
-            <!--android:id="@+id/searchFragment"-->
-            <!--android:title="@string/label_search_notes" />-->
+        <item
+            android:id="@+id/productPurchasedFragment"
+            android:title="@string/titleProductPurchasedFragment" />
     </group>
 </menu>
