--- a/app/src/main/res/navigation/products_to_pay_navigation.xml
+++ b/app/src/main/res/navigation/products_to_pay_navigation.xml
@@ -25,12 +25,12 @@
               android:label="product purchased"
               tools:layout="@layout/product_purchased_fragment">
         <argument
-                android:name="productName"
+                android:name="orderId"
                 app:argType="string"
                 android:defaultValue="name"/>
         <deepLink
                 android:id="@+id/webUrlDeepLink"
-                app:uri="https://www.ptpay.com/product/{productName}"/>
+                app:uri="https://www.ptpay.com/product/{orderId}"/>
     </fragment>
 
 </navigation>
