--- a/app/src/main/res/layout/product_purchased_fragment.xml
+++ b/app/src/main/res/layout/product_purchased_fragment.xml
@@ -4,11 +4,25 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_margin="16dp">
-
-    <TextView
-            android:id="@+id/currentProductId"
+    <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:text="Hello"/>
+            android:orientation="vertical">
+
+        <TextView
+                android:id="@+id/title"
+                style="@style/ProductTextViewTitle"/>
+
+        <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/ordersRecyclerView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+        </androidx.recyclerview.widget.RecyclerView>
+
+
+    </LinearLayout>
+
+    <include layout="@layout/loading_view"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
