--- a/app/src/main/res/navigation/products_to_pay_navigation.xml
+++ b/app/src/main/res/navigation/products_to_pay_navigation.xml
@@ -11,23 +11,15 @@
             android:label="@string/label_products"
             tools:layout="@layout/products_fragment">
 
-        <!--<action-->
-        <!--android:id="@+id/action_notes_to_noteDetail"-->
-        <!--app:destination="@id/noteDetailFragment"-->
-        <!--app:enterAnim="@anim/enter_slide_down"-->
-        <!--app:exitAnim="@anim/exit_slide_down"-->
-        <!--app:popEnterAnim="@anim/pop_enter_slide_up"-->
-        <!--app:popExitAnim="@anim/pop_exit_slide_up" />-->
-
     </fragment>
     <fragment android:id="@+id/productPurchasedFragment"
               android:name="com.tpaga.productstopay.presentation.orders.OrderListFragment"
-              android:label="product purchased"
+              android:label="@string/title_product_purchased_fragment"
               tools:layout="@layout/product_purchased_fragment">
         <argument
                 android:name="orderId"
                 app:argType="string"
-                android:defaultValue="name"/>
+                android:defaultValue="0"/>
         <deepLink
                 android:id="@+id/webUrlDeepLink"
                 app:uri="https://www.ptpay.com/product/{orderId}"/>
