[Progress] Add icons svg to layout items.

--- a/app/src/main/res/layout/item_order_list.xml
+++ b/app/src/main/res/layout/item_order_list.xml
@@ -5,16 +5,43 @@
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        card_view:cardBackgroundColor="@color/design_default_color_primary_dark"
         card_view:cardCornerRadius="10dp"
         card_view:cardElevation="5dp"
         card_view:cardUseCompatPadding="true">
     <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
-        <TextView
-                android:id="@+id/status"
-                style="@style/ProductTextViewNormal"/>
+        <ImageView
+
+                android:id="@+id/image"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="5dp"
+                android:layout_centerVertical="true"
+                android:src="@drawable/ic_delivery_truck"/>
+        <LinearLayout
+                android:layout_toRightOf="@+id/image"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+            <TextView
+                    android:id="@+id/orderId"
+                    style="@style/ProductTextViewNormal"/>
+
+            <TextView
+                    android:id="@+id/orderStatus"
+                    style="@style/ProductTextViewNormal"/>
+
+            <TextView
+                    android:id="@+id/orderDescription"
+                    style="@style/ProductTextViewLight"/>
+
+            <TextView
+                    android:id="@+id/orderPrice"
+                    style="@style/ProductTextViewLight"/>
+        </LinearLayout>
+
 
     </RelativeLayout>
 
