[Progress] New fields in item_order_list.

--- a/app/src/main/res/layout/item_order_list.xml
+++ b/app/src/main/res/layout/item_order_list.xml
@@ -38,6 +38,14 @@
                     style="@style/ProductTextViewLight"/>
 
             <TextView
+                    android:id="@+id/productCount"
+                    style="@style/ProductTextViewLight"/>
+
+            <TextView
+                    android:id="@+id/productName"
+                    style="@style/ProductTextViewLight"/>
+
+            <TextView
                     android:id="@+id/orderPrice"
                     style="@style/ProductTextViewLight"/>
         </LinearLayout>
