[Feat] Navigate from product list to purchases.

--- a/app/src/main/res/navigation/products_to_pay_navigation.xml
+++ b/app/src/main/res/navigation/products_to_pay_navigation.xml
@@ -11,6 +11,12 @@
             android:label="@string/label_products"
             tools:layout="@layout/products_fragment">
 
+        <action android:id="@+id/moveToPurchases"
+                app:destination="@id/productPurchasedFragment"
+                app:enterAnim="@anim/nav_default_pop_enter_anim"
+                app:exitAnim="@anim/nav_default_exit_anim"
+                app:popEnterAnim="@anim/nav_default_pop_enter_anim"
+                app:popExitAnim="@anim/nav_default_pop_exit_anim"/>
     </fragment>
     <fragment android:id="@+id/productPurchasedFragment"
               android:name="com.tpaga.productstopay.presentation.orders.OrderListFragment"
